--- a/templates/week.md.j2
+++ b/templates/week.md.j2
@@ -2,20 +2,15 @@
 
 {{ reflection }}
 
-{% for lab_key, lab_value in tasks['lab'].items() %}
-### {{ lab_value['topic'] }}: {{ lab_value['name'] }}
+{% for lab_key, lab_value in tasks['lab'].items() %}### {{ lab_value['topic'] }}: {{ lab_value['name'] }}
 
 ```
 {{ lab_value['code'] }}
 ```
-
 {% endfor %}
-
-{% for extra_key, extra_value in tasks['extra'].items() %}
-### {{ extra_value['topic'] }}: {{ extra_value['name'] }}
+{% for extra_key, extra_value in tasks['extra'].items() %}### {{ extra_value['topic'] }}: {{ extra_value['name'] }}
 
 ```
 {{ extra_value['code'] }}
 ```
-
 {% endfor %}
