--- a/templates/contents.md.j2
+++ b/templates/contents.md.j2
@@ -3,6 +3,8 @@
 | **Section**                                                                 | **Page** |
 |-----------------------------------------------------------------------------|----------|
 | **Disclaimer**                                                              | 1        |{% set current_page = 2 %}{% for week_key, week in weeks.items() %} 
-| [**Week {{ week.number }}** – {{ week.start_date }} to {{ week.end_date }} ](#week-{{ week.number }}-{{ week.start_date }}-to-{{ week.end_date }}) | {{ current_page }}        |{% set lab_index = current_page %}{% for lab_key, lab in week.tasks.lab.items() %} 
-| &nbsp;&nbsp;&nbsp;&nbsp;{{ week.number }}.{{ loop.index }} [{{ lab.topic }}: {{ lab.name }}](#{{ lab.topic | lower | replace(' ', '-') }}-{{ lab.name | lower | replace(' ', '-') }}) | {{ lab_index }}        |{% set lab_index = lab_index + 1 %}{% endfor %}{% set extra_index = lab_index %}{% for extra_key, extra in week.tasks.extra.items() %} 
-| &nbsp;&nbsp;&nbsp;&nbsp;*{{ week.number }}.{{ extra_index - loop.index0 }} [{{ extra.topic }}: {{ extra.name }}](#{{ extra.topic | lower | replace(' ', '-') }}-{{ extra.name | lower | replace(' ', '-') }})* | {{ extra_index }}        |{% set extra_index = extra_index + 1 %}{% endfor %}{% set current_page = extra_index %}{% endfor %}
+| [**Week {{ week.number }}** – {{ week.start_date }} to {{ week.end_date }} ](#week-{{ week.number }}-{{ week.start_date }}-to-{{ week.end_date }}) | {{ current_page }}        |{% for lab_key, lab in week.tasks.lab.items() %} 
+| &nbsp;&nbsp;&nbsp;&nbsp;{{ week.number }}.{{ loop.index }} [{{ lab.topic }}: {{ lab.name }}](#{{ lab.topic | lower | replace(' ', '-') }}-{{ lab.name | lower | replace(' ', '-') }}) | {{ current_page }}        |{% set current_page = current_page + 1 %}{% endfor %}{% for extra_key, extra in week.tasks.extra.items() %} 
+| &nbsp;&nbsp;&nbsp;&nbsp;*{{ week.number }}.{{ loop.index + week.tasks.lab|length }} [{{ extra.topic }}: {{ extra.name }}](#{{ extra.topic | lower | replace(' ', '-') }}-{{ extra.name | lower | replace(' ', '-') }})* | {{ current_page }}        |{% set current_page = current_page + 1 %}{% endfor %}{% endfor %}
+
+\newpage
