feat: add counters to tasks headers in template

--- a/templates/week.md.j2
+++ b/templates/week.md.j2
@@ -2,7 +2,7 @@
 
 {{ reflection }}
 
-{% for lab_key, lab_value in tasks['lab'].items() %}### {{ lab_value['topic'] }}: {{ lab_value['name'] }}
+{% set lab_counter = 1 %}{% for lab_key, lab_value in tasks['lab'].items() %}### {{ lab_counter }}. {{ lab_value['topic'] }}: {{ lab_value['name'] }}
 
 {% if lab_value['code'] is mapping %}{% for task_id, task_answers in lab_value['code'].items() %}{% set parts = task_id.split('_') %}{% set formatted_task_id = 'Task ' ~ parts[1] ~ '.' ~ parts[2] %}#### {{ formatted_task_id }}
 {% for task_answer, task_code in task_answers %}{{ task_answer }}
@@ -19,9 +19,9 @@
 {{ lab_value['code'] }}
 ```
 
-{% endif %}{% endfor %}
+{% endif %}{% set lab_counter = lab_counter + 1 %}{% endfor %}
 
-{% for extra_key, extra_value in tasks['extra'].items() %}### {{ extra_value['topic'] }}: {{ extra_value['name'] }}
+{% set extra_counter = 1 %}{% for extra_key, extra_value in tasks['extra'].items() %}### {{ lab_counter + extra_counter - 1 }}. {{ extra_value['topic'] }}: {{ extra_value['name'] }}
 
 {% if extra_value['code'] is mapping %}{% for task_id, task_answers in extra_value['code'].items() %}{% set parts = task_id.split('_') %}{% set formatted_task_id = 'Task ' ~ parts[1] ~ '.' ~ parts[2] %}#### {{ formatted_task_id }}
 {% for task_answer, task_code in task_answers %}{{ task_answer }}
@@ -37,4 +37,4 @@
 {{ extra_value['code'] }}
 ```
 
-{% endif %}{% endfor %}
+{% endif %}{% set extra_counter = extra_counter + 1 %}{% endfor %}
