--- a/templates/contents.md.j2
+++ b/templates/contents.md.j2
@@ -4,7 +4,7 @@
 |-----------------------------------------------------------------------------|----------|
 | **Disclaimer**                                                              | 1        |{% set current_page = 2 %}{% for week_key, week in weeks.items() %} 
 | [**Week {{ week.number }}** – {{ week.start_date }} to {{ week.end_date }} ](#week-{{ week.number }}-{{ week.start_date }}-to-{{ week.end_date }}) | {{ current_page }}        |{% for lab_key, lab in week.tasks.lab.items() %} 
-| &nbsp;&nbsp;&nbsp;&nbsp;{{ week.number }}.{{ loop.index }} [{{ lab.topic }}: {{ lab.name }}](#{{ loop.index }}--{{ lab.topic | lower | replace(' ', '-') }}-{{ lab.name | lower | replace(' ', '-') }}) | {{ current_page }}        |{% set current_page = current_page + 1 %}{% endfor %}{% for extra_key, extra in week.tasks.extra.items() %} 
-| &nbsp;&nbsp;&nbsp;&nbsp;*{{ week.number }}.{{ loop.index + week.tasks.lab|length }} [{{ extra.topic }}: {{ extra.name }}](#{{ loop.index }}--{{ extra.topic | lower | replace(' ', '-') }}-{{ extra.name | lower | replace(' ', '-') }})* | {{ current_page }}        |{% set current_page = current_page + 1 %}{% endfor %}{% endfor %}
+| &nbsp;&nbsp;&nbsp;&nbsp;{{ week.number }}.{{ loop.index }} [{{ lab.topic }}: {{ lab.name }}](#{{ loop.index }}-{{ lab.topic | lower | replace(' ', '-') }}-{{ lab.name | lower | replace(' ', '-') }}) | {{ current_page }}        |{% set current_page = current_page + 1 %}{% endfor %}{% for extra_key, extra in week.tasks.extra.items() %} 
+| &nbsp;&nbsp;&nbsp;&nbsp;*{{ week.number }}.{{ loop.index + week.tasks.lab|length }} [{{ extra.topic }}: {{ extra.name }}](#{{ loop.index }}-{{ extra.topic | lower | replace(' ', '-') }}-{{ extra.name | lower | replace(' ', '-') }})* | {{ current_page }}        |{% set current_page = current_page + 1 %}{% endfor %}{% endfor %}
 
 \newpage
