--- a/templates/contents.md.j2
+++ b/templates/contents.md.j2
@@ -2,9 +2,9 @@
 
 | **Section**                                                                 | **Page** |
 |-----------------------------------------------------------------------------|----------|
-| **Disclaimer**                                                              | 1        |{% set current_page = 2 %}{% for week_key, week in weeks.items() %} 
-| [**Week {{ week.number }}** – {{ week.start_date }} to {{ week.end_date }} ](#week-{{ week.number }}-{{ week.start_date }}-to-{{ week.end_date }}) | {{ current_page }}        |{% for lab_key, lab in week.tasks.lab.items() %} 
-| &nbsp;&nbsp;&nbsp;&nbsp;{{ week.number }}.{{ loop.index }} [{{ lab.topic }}: {{ lab.name }}](#{{ lab.topic | lower | replace(' ', '-') }}-{{ lab.name | lower | replace(' ', '-') }}) | {{ current_page }}        |{% set current_page = current_page + 1 %}{% endfor %}{% for extra_key, extra in week.tasks.extra.items() %} 
-| &nbsp;&nbsp;&nbsp;&nbsp;*{{ week.number }}.{{ loop.index + week.tasks.lab|length }} [{{ extra.topic }}: {{ extra.name }}](#{{ extra.topic | lower | replace(' ', '-') }}-{{ extra.name | lower | replace(' ', '-') }})* | {{ current_page }}        |{% set current_page = current_page + 1 %}{% endfor %}{% endfor %}
+| **Disclaimer**                                                              | 1        |{% set total_lab_tasks = 0 %}{% for week_key, week in weeks.items() %} 
+| [**Week {{ week.number }}** – {{ week.start_date }} to {{ week.end_date }} ](#week-{{ week.number }}-{{ week.start_date }}-to-{{ week.end_date }}) | {{ 2 + total_lab_tasks }}        |{% for lab_key, lab in week.tasks.lab.items() %} 
+| &nbsp;&nbsp;&nbsp;&nbsp;{{ week.number }}.{{ loop.index }} [{{ lab.topic }}: {{ lab.name }}](#{{ lab.topic | lower | replace(' ', '-') }}-{{ lab.name | lower | replace(' ', '-') }}) | {{ 2 + total_lab_tasks + loop.index }}        |{% set total_lab_tasks = total_lab_tasks + 1 %}{% endfor %}{% for extra_key, extra in week.tasks.extra.items() %} 
+| &nbsp;&nbsp;&nbsp;&nbsp;*{{ week.number }}.{{ loop.index + week.tasks.lab|length }} [{{ extra.topic }}: {{ extra.name }}](#{{ extra.topic | lower | replace(' ', '-') }}-{{ extra.name | lower | replace(' ', '-') }})* | {{ 2 + total_lab_tasks + loop.index }}        |{% endfor %}{% endfor %}
 
 \newpage
