--- a/templates/contents.md.j2
+++ b/templates/contents.md.j2
@@ -6,5 +6,6 @@
 | [**Week {{ week.number }}** – {{ week.start_date }} to {{ week.end_date }} ](#week-{{ week.number }}-{{ week.start_date }}-to-{{ week.end_date }}) | {{ count.value }}        |{% for lab_key, lab in week.tasks.lab.items() %} 
 | &nbsp;&nbsp;&nbsp;&nbsp;{{ week.number }}.{{ loop.index }} [{{ lab.topic }}: {{ lab.name }}](#{{ lab.topic | lower | replace(' ', '-') }}-{{ lab.name | lower | replace(' ', '-') }}) | {{ count.value }}        |{% set count.value = count.value + 1 %}{% endfor %}{% for extra_key, extra in week.tasks.extra.items() %} 
 | &nbsp;&nbsp;&nbsp;&nbsp;*{{ week.number }}.{{ loop.index + week.tasks.lab|length }} [{{ extra.topic }}: {{ extra.name }}](#{{ extra.topic | lower | replace(' ', '-') }}-{{ extra.name | lower | replace(' ', '-') }})* | {{ count.value }}        |{% set count.value = count.value + 1 %}{% endfor %}{% endfor %}
+| **[References](#references)**                                                   | {{ count.value }}        |
 
 \newpage
