fix: typo, remove debug line

--- a/templates/references.md.j2
+++ b/templates/references.md.j2
@@ -1,5 +1,5 @@
 ## 📓 References
 
-{% for reference in data.references %}
+{% for reference in references %}
 [{{ loop.index }}] "{{ reference.description }}," *{{ reference.title }}*, {{ reference.year }}. [Online] Available: {{ reference.url }} (accessed {{ reference.date_accessed }}).
 {% endfor %}
